[gd_scene load_steps=11 format=2]

[ext_resource path="res://Script/UI/DialogText.gd" type="Script" id=1]
[ext_resource path="res://Script/UI/DialogBox.gd" type="Script" id=2]
[ext_resource path="res://Art/CharSprites/Hero.png" type="Texture" id=3]
[ext_resource path="res://Art/Font/DotGothic16-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Art/Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/UI/triangle.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "MarkAnimation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1003, 110 ), Vector2( 1003, 100 ), Vector2( 1003, 110 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1003, 110 ) ]
}

[node name="DialogBox" type="ColorRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -134.0
margin_right = -1.0
color = Color( 0.184314, 0.184314, 0.184314, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="RichTextLabel" parent="."]
margin_left = 135.0
margin_top = 46.0
margin_right = 988.0
margin_bottom = 127.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "placeholder"
text = "placeholder"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextTimer" type="Timer" parent="DialogText"]
wait_time = 0.05
autostart = true

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 136.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
text = "placeholder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Sprite" parent="."]
position = Vector2( 67.8, 66.8 )
scale = Vector2( 1.88125, 1.88125 )
texture = ExtResource( 3 )
hframes = 8
vframes = 3

[node name="Mark" type="Sprite" parent="."]
position = Vector2( 1003, 110 )
scale = Vector2( 0.296875, 0.53125 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Mark"]
autoplay = "MarkAnimation"
anims/MarkAnimation = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="end_text" from="DialogText" to="." method="_on_DialogText_end_text"]
[connection signal="mark_appear" from="DialogText" to="." method="_on_DialogText_mark_appear"]
[connection signal="timeout" from="DialogText/TextTimer" to="DialogText" method="_on_Timer_timeout"]
